[gd_scene load_steps=6 format=3 uid="uid://bsrphuurxcwjy"]

[ext_resource type="Script" uid="uid://c8g2i8173v0no" path="res://scirpts/theft.gd" id="1_sepdr"]
[ext_resource type="Texture2D" uid="uid://coxdj3u7ynesl" path="res://assets/light/256x256 textures (27).png" id="2_f6f35"]
[ext_resource type="SpriteFrames" uid="uid://dvcqmol63ccqk" path="res://assets/frames/Theft_idle.tres" id="2_sepdr"]
[ext_resource type="AudioStream" uid="uid://dqycmhr2hubim" path="res://audio/step on carpet-Trimmed.mp3" id="4_1kbei"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f6f35"]
size = Vector2(176, 257)

[node name="Theft" type="CharacterBody2D"]
collision_mask = 30
script = ExtResource("1_sepdr")

[node name="Flashlight" type="PointLight2D" parent="."]
visibility_layer = 30
position = Vector2(140, 1)
scale = Vector2(1.2, 1.2)
color = Color(0.898039, 0.87451, 0.611765, 1)
texture = ExtResource("2_f6f35")
texture_scale = 1.7

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
sprite_frames = ExtResource("2_sepdr")
animation = &"crouch"
frame_progress = 0.471905

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7, -0.5)
shape = SubResource("RectangleShape2D_f6f35")

[node name="WalkStep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_1kbei")
volume_db = 1.0
pitch_scale = 1.57

[node name="CrouchStep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_1kbei")
volume_db = -7.0
pitch_scale = 1.3

[connection signal="animation_finished" from="Sprite2D" to="." method="_on_sprite_2d_animation_finished"]
